añadir input material a librerria

--- a/src/app/chat/chat/chat-search/chat-search.component.html
+++ b/src/app/chat/chat/chat-search/chat-search.component.html
@@ -1,4 +1,4 @@
 <div class="content ngx-util-search">
-  <ngx-utilitario-input class="w-100 ngx-util-search-input" label="busqueda" iconMatSuffix="fa fa-search"
+  <ngx-utilitario-input class="clt-width-100" label="busqueda" iconMatSuffix="search" 
     [parent]="searchForm" name="search" (value)="changeValue()"></ngx-utilitario-input>
 </div>
