--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
     <!-- <ngx-utilitario-chat-detail-preview></ngx-utilitario-chat-detail-preview> -->
     <!-- <ngx-utilitario-chat-detail-message [messages]="messages"></ngx-utilitario-chat-detail-message>  -->
     <!-- <ngx-utilitario-chat-detail-add></ngx-utilitario-chat-detail-add> -->
-    <ngx-utilitario-chat-detail [chatDetail]="chatDetail"></ngx-utilitario-chat-detail>
+    <!-- <ngx-utilitario-chat-detail [chatDetail]="chatDetail"></ngx-utilitario-chat-detail> -->
+    <ngx-utilitario-chat-list></ngx-utilitario-chat-list>
 </div>
 <!-- <button (click)="add()">agregar</button> -->
