--- a/src/app/chat/chat/chat-list/chat-list.component.html
+++ b/src/app/chat/chat/chat-list/chat-list.component.html
@@ -1,3 +1,35 @@
+<!--Cabecera-->
+<header class="clt-width-dynamic clt-chat-list-header ">
+    <div class="clt-width-dynamic-col clt-content-centered">
+        Chats
+    </div>
+    <div class="clt-content-centered clt-chat-list-menu">
+        <!-- Menu en el chat -->
+        <button class="clt-btn-icon" mat-icon-button [matMenuTriggerFor]="menu"
+            aria-label="Example icon-button with a menu">
+            <mat-icon>more_vert</mat-icon>
+        </button>
+        <mat-menu #menu="matMenu">
+            <button mat-menu-item>
+                <!-- <mat-icon>dialpad</mat-icon> -->
+                <span>Chats bloqueados</span>
+            </button>
+            <button mat-menu-item>
+                <!-- <mat-icon>voicemail</mat-icon> -->
+                <span>Eliminar conversación</span>
+            </button>
+            <button mat-menu-item>
+                <!-- <mat-icon>notifications_off</mat-icon> -->
+                <span>Ver anuncio</span>
+            </button>
+        </mat-menu>
+    </div>
+</header>
+<!--Busqueda-->
+<ngx-utilitario-chat-search class="ngx-util-list-search" (searchChange)="searchChange($event)">
+</ngx-utilitario-chat-search>
+<!--Lista de chats-->
 <ngx-utilitario-perfect-scroll>
-    <ngx-utilitario-chat-list-detail *ngFor="let item of list" [listDetail]="item" [search]="search" (clickDetail)="click($event)"></ngx-utilitario-chat-list-detail>
+    <ngx-utilitario-chat-list-detail *ngFor="let item of list" [listDetail]="item" [search]="search"
+        (clickDetail)="click($event)"></ngx-utilitario-chat-list-detail>
 </ngx-utilitario-perfect-scroll>
