--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,2 @@
-<div style="width: 450px; height: 750px;">
-    <!-- <ngx-utilitario-chat-detail-preview></ngx-utilitario-chat-detail-preview> -->
-    <!-- <ngx-utilitario-chat-detail-message [messages]="messages"></ngx-utilitario-chat-detail-message>  -->
-    <!-- <ngx-utilitario-chat-detail-add></ngx-utilitario-chat-detail-add> -->
-    <!-- <ngx-utilitario-chat-detail [chatDetail]="chatDetail"></ngx-utilitario-chat-detail> -->
-    <ngx-utilitario-chat-list></ngx-utilitario-chat-list>
-</div>
-<!-- <button (click)="add()">agregar</button> -->
+
+<ngx-utilitario-loading></ngx-utilitario-loading>
